# proto/gen/api/v1/memo_service_grpc.pb.go
@@ -20,23 +20,24 @@ import (
 const _ = grpc.SupportPackageIsVersion9
 
 const (
-	MemoService_CreateMemo_FullMethodName         = "/memos.api.v1.MemoService/CreateMemo"
-	MemoService_ListMemos_FullMethodName          = "/memos.api.v1.MemoService/ListMemos"
-	MemoService_GetMemo_FullMethodName            = "/memos.api.v1.MemoService/GetMemo"
-	MemoService_GetMemoByUid_FullMethodName       = "/memos.api.v1.MemoService/GetMemoByUid"
-	MemoService_UpdateMemo_FullMethodName         = "/memos.api.v1.MemoService/UpdateMemo"
-	MemoService_DeleteMemo_FullMethodName         = "/memos.api.v1.MemoService/DeleteMemo"
-	MemoService_RenameMemoTag_FullMethodName      = "/memos.api.v1.MemoService/RenameMemoTag"
-	MemoService_DeleteMemoTag_FullMethodName      = "/memos.api.v1.MemoService/DeleteMemoTag"
-	MemoService_SetMemoResources_FullMethodName   = "/memos.api.v1.MemoService/SetMemoResources"
-	MemoService_ListMemoResources_FullMethodName  = "/memos.api.v1.MemoService/ListMemoResources"
-	MemoService_SetMemoRelations_FullMethodName   = "/memos.api.v1.MemoService/SetMemoRelations"
-	MemoService_ListMemoRelations_FullMethodName  = "/memos.api.v1.MemoService/ListMemoRelations"
-	MemoService_CreateMemoComment_FullMethodName  = "/memos.api.v1.MemoService/CreateMemoComment"
-	MemoService_ListMemoComments_FullMethodName   = "/memos.api.v1.MemoService/ListMemoComments"
-	MemoService_ListMemoReactions_FullMethodName  = "/memos.api.v1.MemoService/ListMemoReactions"
-	MemoService_UpsertMemoReaction_FullMethodName = "/memos.api.v1.MemoService/UpsertMemoReaction"
-	MemoService_DeleteMemoReaction_FullMethodName = "/memos.api.v1.MemoService/DeleteMemoReaction"
+	MemoService_CreateMemo_FullMethodName             = "/memos.api.v1.MemoService/CreateMemo"
+	MemoService_ListMemos_FullMethodName              = "/memos.api.v1.MemoService/ListMemos"
+	MemoService_GetMemo_FullMethodName                = "/memos.api.v1.MemoService/GetMemo"
+	MemoService_GetMemoByUid_FullMethodName           = "/memos.api.v1.MemoService/GetMemoByUid"
+	MemoService_UpdateMemo_FullMethodName             = "/memos.api.v1.MemoService/UpdateMemo"
+	MemoService_DeleteMemo_FullMethodName             = "/memos.api.v1.MemoService/DeleteMemo"
+	MemoService_RenameMemoTag_FullMethodName          = "/memos.api.v1.MemoService/RenameMemoTag"
+	MemoService_DeleteMemoTag_FullMethodName          = "/memos.api.v1.MemoService/DeleteMemoTag"
+	MemoService_SetMemoResources_FullMethodName       = "/memos.api.v1.MemoService/SetMemoResources"
+	MemoService_ListMemoResources_FullMethodName      = "/memos.api.v1.MemoService/ListMemoResources"
+	MemoService_SetMemoRelations_FullMethodName       = "/memos.api.v1.MemoService/SetMemoRelations"
+	MemoService_ListMemoRelations_FullMethodName      = "/memos.api.v1.MemoService/ListMemoRelations"
+	MemoService_CreateMemoComment_FullMethodName      = "/memos.api.v1.MemoService/CreateMemoComment"
+	MemoService_ListMemoComments_FullMethodName       = "/memos.api.v1.MemoService/ListMemoComments"
+	MemoService_ListMemoReactions_FullMethodName      = "/memos.api.v1.MemoService/ListMemoReactions"
+	MemoService_UpsertMemoReaction_FullMethodName     = "/memos.api.v1.MemoService/UpsertMemoReaction"
+	MemoService_DeleteMemoReaction_FullMethodName     = "/memos.api.v1.MemoService/DeleteMemoReaction"
+	MemoService_GetMemosFromPastMonths_FullMethodName = "/memos.api.v1.MemoService/GetMemosFromPastMonths"
 )
 
 // MemoServiceClient is the client API for MemoService service.
@@ -77,6 +78,8 @@ type MemoServiceClient interface {
 	UpsertMemoReaction(ctx context.Context, in *UpsertMemoReactionRequest, opts ...grpc.CallOption) (*Reaction, error)
 	// DeleteMemoReaction deletes a reaction for a memo.
 	DeleteMemoReaction(ctx context.Context, in *DeleteMemoReactionRequest, opts ...grpc.CallOption) (*emptypb.Empty, error)
+	// 「那月今日」功能 api
+	GetMemosFromPastMonths(ctx context.Context, in *GetMemosFromPastMonthsRequest, opts ...grpc.CallOption) (*GetMemosFromPastMonthsResponse, error)
 }
 
 type memoServiceClient struct {
@@ -257,6 +260,16 @@ func (c *memoServiceClient) DeleteMemoReaction(ctx context.Context, in *DeleteMe
 	return out, nil
 }
 
+func (c *memoServiceClient) GetMemosFromPastMonths(ctx context.Context, in *GetMemosFromPastMonthsRequest, opts ...grpc.CallOption) (*GetMemosFromPastMonthsResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(GetMemosFromPastMonthsResponse)
+	err := c.cc.Invoke(ctx, MemoService_GetMemosFromPastMonths_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // MemoServiceServer is the server API for MemoService service.
 // All implementations must embed UnimplementedMemoServiceServer
 // for forward compatibility.
@@ -295,6 +308,8 @@ type MemoServiceServer interface {
 	UpsertMemoReaction(context.Context, *UpsertMemoReactionRequest) (*Reaction, error)
 	// DeleteMemoReaction deletes a reaction for a memo.
 	DeleteMemoReaction(context.Context, *DeleteMemoReactionRequest) (*emptypb.Empty, error)
+	// 「那月今日」功能 api
+	GetMemosFromPastMonths(context.Context, *GetMemosFromPastMonthsRequest) (*GetMemosFromPastMonthsResponse, error)
 	mustEmbedUnimplementedMemoServiceServer()
 }
 
@@ -355,6 +370,9 @@ func (UnimplementedMemoServiceServer) UpsertMemoReaction(context.Context, *Upser
 }
 func (UnimplementedMemoServiceServer) DeleteMemoReaction(context.Context, *DeleteMemoReactionRequest) (*emptypb.Empty, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method DeleteMemoReaction not implemented")
+}
+func (UnimplementedMemoServiceServer) GetMemosFromPastMonths(context.Context, *GetMemosFromPastMonthsRequest) (*GetMemosFromPastMonthsResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method GetMemosFromPastMonths not implemented")
 }
 func (UnimplementedMemoServiceServer) mustEmbedUnimplementedMemoServiceServer() {}
 func (UnimplementedMemoServiceServer) testEmbeddedByValue()                     {}
@@ -683,6 +701,24 @@ func _MemoService_DeleteMemoReaction_Handler(srv interface{}, ctx context.Contex
 	return interceptor(ctx, in, info, handler)
 }
 
+func _MemoService_GetMemosFromPastMonths_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetMemosFromPastMonthsRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(MemoServiceServer).GetMemosFromPastMonths(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: MemoService_GetMemosFromPastMonths_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(MemoServiceServer).GetMemosFromPastMonths(ctx, req.(*GetMemosFromPastMonthsRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // MemoService_ServiceDesc is the grpc.ServiceDesc for MemoService service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -757,6 +793,10 @@ var MemoService_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "DeleteMemoReaction",
 			Handler:    _MemoService_DeleteMemoReaction_Handler,
+		},
+		{
+			MethodName: "GetMemosFromPastMonths",
+			Handler:    _MemoService_GetMemosFromPastMonths_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
